demo: enhancements to demo UI code

--- a/demo/views/edit.ejs
+++ b/demo/views/edit.ejs
@@ -1,5 +1,5 @@
 <div class="form-header">
-    <h2>Build a C PDS source file and run</h2>
+    <h2>Browse, or Build a C PDS source file and run</h2>
     <% if (Object.keys(info).length !== 0) { %>
       <div style="border: 5px solid grey; margin-bottom: 10px;">
         <h4>Build and Run Output:</h4>
@@ -42,6 +42,6 @@
     <textarea class="input" id="contents" name="contents" rows="20" autofocus><%= data.contents %></textarea>
   </div>
   <div class="form-actions">
-    <button class="btn" type="submit">Build and Run</button>
+    <button class="btn" type="submit">Save, Build and Run</button>
   </div>
 </form>
